# Rust-Web-Backend

./: .env  .gitignore  Cargo.toml  fbla.db  fbla.db-journal  test.js
src/: main.rs
src/data/: database.rs  new_user.rs  posts.rs
src/utils/: database.rs  encrypt.rs  enums.rs  structures.rs
src/utils/routes/: accounts.rs  applications.rs  backend.code-workspace  messages.rs  misc.rs  posts.rs
